--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Poole
 tagline: The Jekyll Butler
 url: https://getpoole.com
 paginate: 1
-baseurl: ""
+baseurl: "http://eunjinny.github.io/note/"
 permalink: pretty
 
 # Gems
